--- a/package.json
+++ b/package.json
@@ -10,14 +10,41 @@
         "clean": "rimraf dist/*",
         "tsc": "tsc",
         "build": "npm-run-all clean tsc",
-        "start": "node ."
+        "start": "node .",
+        "lint": "eslint --ext .js,.ts, ."
     },
     "devDependencies": {
         "@types/node": "12",
+        "@typescript-eslint/eslint-plugin": "^4.10.0",
+        "@typescript-eslint/parser": "^4.10.0",
+        "eslint": "^7.15.0",
+        "eslint-config-prettier": "^7.0.0",
+        "eslint-config-standard": "^16.0.2",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-jest": "^24.1.3",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-prettier": "^3.3.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^5.0.0",
+        "husky": ">=4",
+        "jest": "^26.6.3",
+        "lint-staged": ">=10",
         "npm-run-all": "^4.1.5",
+        "prettier": "^2.2.1",
         "rimraf": "^3.0.2",
+        "ts-jest": "^26.4.4",
         "ts-node": "^9.1.1",
         "ts-node-dev": "^1.1.1",
         "typescript": "^4.1.3"
+    },
+    "husky": {
+        "hooks": {
+            "pre-commit": "lint-staged"
+        }
+    },
+    "lint-staged": {
+        "*.{js,ts}": "eslint --cache --fix",
+        "*.ts": "tsc --noEmit",
+        "*.{js,ts,json}": "prettier --write"
     }
 }
