--- a/package.json
+++ b/package.json
@@ -6,25 +6,29 @@
     "license": "MIT",
     "scripts": {
         "dev": "ts-node src/app.ts",
-        "dev:watch": "ts-node-dev --respawn src/app.ts",
-        "clean": "rimraf dist/*",
+        "dev:watch": "nodemon --watch src --ext ts,js,pug,json --exec 'ts-node' src/app.ts",
+        "clean": "rimraf /server/dist/*",
         "tsc": "tsc",
         "build": "npm-run-all clean tsc",
-        "start": "node .",
-        "lint": "eslint --ext .js,.ts, ."
+        "start": "node ",
+        "lint": "eslint --ext .js,.ts, "
     },
     "devDependencies": {
-        "@types/node": "12",
-        "@typescript-eslint/eslint-plugin": "^4.10.0",
-        "@typescript-eslint/parser": "^4.10.0",
-        "eslint": "^7.15.0",
+        "@types/body-parser": "^1.19.0",
+        "@types/express": "^4.17.11",
+        "@types/mongodb": "^3.6.12",
+        "@types/node": "^14.14.41",
+        "@types/uuid": "^8.3.0",
+        "@typescript-eslint/eslint-plugin": "^4.22.0",
+        "@typescript-eslint/parser": "^4.22.0",
+        "eslint": "^7.24.0",
         "eslint-config-prettier": "^7.0.0",
         "eslint-config-standard": "^16.0.2",
         "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jest": "^24.1.3",
+        "eslint-plugin-jest": "^24.3.5",
         "eslint-plugin-node": "^11.1.0",
-        "eslint-plugin-prettier": "^3.3.0",
-        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-prettier": "^3.4.0",
+        "eslint-plugin-promise": "^5.1.0",
         "eslint-plugin-standard": "^5.0.0",
         "husky": ">=4",
         "jest": "^26.6.3",
@@ -32,10 +36,10 @@
         "npm-run-all": "^4.1.5",
         "prettier": "^2.2.1",
         "rimraf": "^3.0.2",
-        "ts-jest": "^26.4.4",
+        "ts-jest": "^26.5.5",
         "ts-node": "^9.1.1",
-        "ts-node-dev": "^1.1.1",
-        "typescript": "^4.1.3"
+        "ts-node-dev": "^1.1.6",
+        "typescript": "^4.2.4"
     },
     "husky": {
         "hooks": {
@@ -46,5 +50,13 @@
         "*.{js,ts}": "eslint --cache --fix",
         "*.ts": "tsc --noEmit",
         "*.{js,ts,json}": "prettier --write"
+    },
+    "dependencies": {
+        "body-parser": "^1.19.0",
+        "dotenv": "^8.2.0",
+        "express": "^4.17.1",
+        "mongodb": "^3.6.6",
+        "mongoose": "^5.12.5",
+        "uuid": "^8.3.2"
     }
 }
