--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "husky": ">=4",
         "jest": "^26.6.3",
         "lint-staged": ">=10",
+        "nodemon": "^2.0.7",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.2.1",
         "rimraf": "^3.0.2",
@@ -48,7 +49,6 @@
     },
     "lint-staged": {
         "*.{js,ts}": "eslint --cache --fix",
-        "*.ts": "tsc --noEmit",
         "*.{js,ts,json}": "prettier --write"
     },
     "dependencies": {
