--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "allowJs": true,
         "allowSyntheticDefaultImports": true,
-        "baseUrl": "./src",
+        "baseUrl": ".",
         "composite": false,
         "emitDecoratorMetadata": true,
         "esModuleInterop": true,
@@ -15,7 +15,7 @@
             "dom.iterable",
             "scripthost"
         ],
-        "module": "esnext",
+        "module": "commonjs",
         "moduleResolution": "node",
         "noEmit": false,
         "noImplicitAny": false,
@@ -27,9 +27,13 @@
         "strict": true,
         "strictNullChecks": true,
         "suppressImplicitAnyIndexErrors": false,
-        "target": "esnext"
+        "target": "esnext",
+        "typeRoots": [
+            "./node_modules/@types",
+            "./src/types"
+        ]
     },
     "exclude": [
         "node_modules"
-    ],
+    ]
 }
