--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "body-parser": "^1.19.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "express-validator": "^6.10.0",
         "mongodb": "^3.6.6",
         "mongoose": "^5.12.5",
         "uuid": "^8.3.2"
