--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
         "lint": "eslint --ext .js,.ts, "
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
         "@types/body-parser": "^1.19.0",
         "@types/express": "^4.17.11",
         "@types/mongodb": "^3.6.12",
+        "@types/multer": "^1.4.5",
         "@types/node": "^14.14.41",
         "@types/uuid": "^8.3.0",
         "@typescript-eslint/eslint-plugin": "^4.22.0",
@@ -52,12 +54,14 @@
         "*.{js,ts,json}": "prettier --write"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.10.0",
         "mongodb": "^3.6.6",
         "mongoose": "^5.12.5",
+        "multer": "^1.4.2",
         "uuid": "^8.3.2"
     }
 }
