--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/body-parser": "^1.19.0",
         "@types/express": "^4.17.11",
+        "@types/jsonwebtoken": "^8.5.1",
         "@types/mongodb": "^3.6.12",
         "@types/multer": "^1.4.5",
         "@types/node": "^14.14.41",
@@ -59,6 +60,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-validator": "^6.10.0",
+        "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.6.6",
         "mongoose": "^5.12.5",
         "multer": "^1.4.2",
