--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
         "mongodb": "^3.6.6",
         "mongoose": "^5.12.7",
         "multer": "^1.4.2",
+        "socket.io": "^4.0.2",
         "uuid": "^8.3.2"
     }
 }
