--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "@types/multer": "^1.4.5",
         "@types/node": "^15.0.2",
         "@types/uuid": "^8.3.0",
+        "@types/validator": "^13.1.3",
         "@typescript-eslint/eslint-plugin": "^4.22.1",
         "@typescript-eslint/parser": "^4.22.1",
         "eslint": "^7.25.0",
@@ -57,14 +58,18 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "dotenv": "^9.0.0",
         "express": "^4.17.1",
+        "express-graphql": "^0.12.0",
         "express-validator": "^6.10.1",
+        "graphql": "^15.5.0",
         "jsonwebtoken": "^8.5.1",
         "mongodb": "^3.6.6",
         "mongoose": "^5.12.7",
         "multer": "^1.4.2",
         "socket.io": "^4.0.2",
-        "uuid": "^8.3.2"
+        "uuid": "^8.3.2",
+        "validator": "^13.6.0"
     }
 }
